<resources>
    <string name="app_name">AndroidLibrary</string>
    <string name="counterSecond">Counter 2</string>
    <string name="counterThird">Counter 3</string>
    <string name="counterFirst">Counter 1</string>
    <string name="counterText">0</string>
    <string name="login_title">Login </string>
    <string name="onComplete">"onComplete"</string>
    <string name="detailedUserHeader">List of Repositories</string>
    <string name="repo_name">Name of Repository</string>
    <string name="repo_url">Url of Repository</string>
    <string name="repo_forks_count">Count of forks in this repo</string>
    <string name="repo_language">Repo language</string>
    <string name="repo_status">Is it private?</string>
    <string name="error_repo">User has no repos url</string>
    <string name="error_find_user">No such user in cache</string>
    <string name="error_instance_db">Database has not been created. Please call create(context)</string>
    <string name="error_get_db">Database has not been created.</string>
</resources>