<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counterFirst" />

    <Button
        android:id="@+id/buttonCounterFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counterText"
        app:layout_constraintTop_toBottomOf="@id/textViewFirst" />

    <TextView
        android:id="@+id/textViewSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counterSecond"
        app:layout_constraintTop_toBottomOf="@id/buttonCounterFirst" />

    <Button
        android:id="@+id/buttonCounterSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counterText"
        app:layout_constraintTop_toBottomOf="@id/textViewSecond" />

    <TextView
        android:id="@+id/textViewThird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counterThird"
        app:layout_constraintTop_toBottomOf="@id/buttonCounterSecond" />

    <Button
        android:id="@+id/buttonCounterThird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counterText"
        app:layout_constraintTop_toBottomOf="@id/textViewThird" />
</LinearLayout>
